--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,6 @@ limitations under the License.
 
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=employe/index.jsf">
+<meta http-equiv="Refresh" content="0; URL=employee/create.jsf">
 </head>
 </html>
